# Sairam-Aegis

./: README.md
Aegis_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Aegis_backend/Sairam_knowledge_base/: major_laws_indian_constitution.md
Aegis_backend/app/: main.py
Aegis_backend/app/api/: auth.py  chats.py  deps.py  projects.py  rag.py  runners.py
Aegis_backend/app/core/: config.py  security.py
Aegis_backend/app/db/: supabase.py
Aegis_backend/app/rag/: ingestion.py  llm.py  runner_manager.py  service.py  vector_store.py
Aegis_backend/app/schemas/: auth.py  chat.py  project.py  rag.py
Aegis_backend/supabase/migrations/: 20260527000100_initial_schema.sql  20260527000200_rls_policies.sql  20260527000300_local_auth.sql  20260529000100_rag_pgvector.sql
Aegis_backend/tests/: test_chat_stream_errors.py  test_config.py  test_ingestion.py  test_rag_status_schema.py  test_runner_manager.py  test_security.py  test_streaming.py  test_supabase_vector_store.py
Aegis_frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
Aegis_frontend/src/app/: globals.css  layout.tsx
Aegis_frontend/src/app/chat/: page.tsx
Aegis_frontend/src/app/login/: page.tsx
Aegis_frontend/src/app/projects/: page.tsx
Aegis_frontend/src/components/: AppShell.tsx  AuthGuard.tsx  Sidebar.tsx
Aegis_frontend/src/lib/: api.ts  env.ts  localAuth.ts  supabase.ts
Aegis_frontend/src/types/: index.ts
Aegis_runner/: README.md  requirements.txt  runner.py
