[project]
name = "aegis-backend"
version = "0.1.0"
description = "FastAPI RAG backend for Aegis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.2.1",
  "chromadb>=0.5.23",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "langchain>=0.3.7",
  "langchain-chroma>=0.1.4",
  "langchain-huggingface>=0.1.2",
  "langchain-openai>=0.2.8",
  "langchain-text-splitters>=0.3.2",
  "pydantic-settings>=2.6.1",
  "pyjwt>=2.10.0",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=3.3.1",
  "supabase>=2.10.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
